# copy-template

./: README.md  pyproject.toml
.github/workflows/: test.yml
copy_template/: __main__.py  utils.py
