[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-template"
version = "1.0.1"
description = "Shortcut to Copier"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3"
]
authors = [
    {name = "andrey4ik21pro1"}
]
dependencies = [
    "copier"
]

[project.urls]
Homepage = "https://github.com/andrey4ik21pro1/copy-template"
Repository = "https://github.com/andrey4ik21pro1/copy-template"
Issues = "https://github.com/andrey4ik21pro1/copy-template/issues"

[project.scripts]
copy-template = "copy_template.__main__:main"
